fix(mapper): eager fetch roles via EntityGraph and use UserMapper in AdminRestController